test/parser/chp/056.hac
// "056.hac" should fail parsing, nothing should follow else clause

defproc split_bool_soup(chan?(bool) A, B, G; chan!(bool) Z) {
bool g, x;
chp {
	*[
		G?(g);
		[g -> A?(x) [] else -> B?(x) [] ~g -> skip ];
		Z!(x)
	]
}
}

